@@ -1,5 +1,10 @@
 2010-08-30  Xavier Queralt  <xqueralt@flumotion.com>
 
+	* flumotion-flashmedia.spec.in:
+	Fix the spec to also include the translations
+
+2010-08-30  Xavier Queralt  <xqueralt@flumotion.com>
+
 	reviewed by: Josep Joan Ribas <jribas@flumotion.com>
 
 	* flumotion/component/producers/fms/fms.py:
